--- a/src/FluentCompare/FluentCompare.csproj
+++ b/src/FluentCompare/FluentCompare.csproj
@@ -1,9 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+		<TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+		
+		<RootNamespace>FluentCompare</RootNamespace>
+		<AssemblyName>FluentCompare</AssemblyName>
+		<PackageId>FluentCompare</PackageId>
+		
+		<Version>0.0.1</Version>
+		<Authors>Grzegorz Pasterny</Authors>
+		<Description>A fluent API for comparing values, arrays, and complex objects in .NET.</Description>
+		<PackageTags>comparison fluent-api dotnet c#</PackageTags>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/GrzegorzPasterny/FluentCompare</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/GrzegorzPasterny/FluentCompare</PackageProjectUrl>
+
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
 </Project>
