--- a/test/FluentCompare.Benchmarks/FluentCompare.Benchmarks.csproj
+++ b/test/FluentCompare.Benchmarks/FluentCompare.Benchmarks.csproj
@@ -29,4 +29,6 @@
     <ProjectReference Include="..\..\src\FluentCompare\FluentCompare.csproj" />
   </ItemGroup>
 
+  <Import Project="..\FluentCompare.Tests.Shared\FluentCompare.Tests.Shared.projitems" Label="Shared" />
+
 </Project>
