--- a/test/FluentCompare.SolutionComparison.Tests/FluentCompare.SolutionComparison.Tests.csproj
+++ b/test/FluentCompare.SolutionComparison.Tests/FluentCompare.SolutionComparison.Tests.csproj
@@ -28,4 +28,6 @@
     <ProjectReference Include="..\..\src\FluentCompare\FluentCompare.csproj" />
   </ItemGroup>
 
+  <Import Project="..\FluentCompare.Tests.Shared\FluentCompare.Tests.Shared.projitems" Label="Shared" />
+
 </Project>
