--- a/.editorconfig
+++ b/.editorconfig
@@ -155,6 +155,9 @@ csharp_style_var_for_built_in_types = false:silent
 csharp_style_var_when_type_is_apparent = false:silent
 csharp_style_var_elsewhere = false:suggestion
 
+# xUnit1012: Null should only be used for nullable parameters
+dotnet_diagnostic.xUnit1012.severity = suggestion
+
 [*.vb]
 #### Naming styles ####
 
