--- a/src/FluentCompare/FluentCompare.csproj
+++ b/src/FluentCompare/FluentCompare.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-		<TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net7.0;net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+		<LangVersion>13</LangVersion>
 		
 		<RootNamespace>FluentCompare</RootNamespace>
 		<AssemblyName>FluentCompare</AssemblyName>
