--- a/test/FluentCompare.Benchmarks/FluentCompare.Benchmarks.csproj
+++ b/test/FluentCompare.Benchmarks/FluentCompare.Benchmarks.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FluentCompare.UnitTests\FluentCompare.UnitTests.csproj" />
+    <ProjectReference Include="..\..\src\FluentCompare\FluentCompare.csproj" />
+    <ProjectReference Include="..\FluentCompare.Tests.Utilities\FluentCompare.Tests.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
