--- a/test/FluentCompare.UnitTests/FluentCompare.UnitTests.csproj
+++ b/test/FluentCompare.UnitTests/FluentCompare.UnitTests.csproj
@@ -8,7 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="35.6.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\FluentCompare\FluentCompare.csproj" />
+    <ProjectReference Include="..\FluentCompare.Tests.Utilities\FluentCompare.Tests.Utilities.csproj" />
   </ItemGroup>
 
   <Import Project="..\FluentCompare.Tests.Shared\FluentCompare.Tests.Shared.projitems" Label="Shared" />
