--- a/test/FluentCompare.Benchmarks/FluentCompare.Benchmarks.csproj
+++ b/test/FluentCompare.Benchmarks/FluentCompare.Benchmarks.csproj
@@ -5,10 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+		<LangVersion>14</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
 		<PackageReference Include="AnyDiff" Version="1.0.99" />
+		<PackageReference Include="AutoMapper" Version="16.0.0" />
 		<PackageReference Include="BenchmarkDotNet" Version="0.15.4" />
     <PackageReference Include="CompareNETObjects" Version="4.84.0" />
   </ItemGroup>
